// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content Pagelet Mapper should convert pagelet with slots and additional pagelets to multi array instance 1`] = `
Array [
  Object {
    "configurationParameters": Object {
      "key": "test",
    },
    "definitionQualifiedName": "domain-pagelet",
    "displayName": "pagelet",
    "domain": "domain",
    "id": "pagelet",
    "slots": Array [
      Object {
        "configurationParameters": Object {},
        "definitionQualifiedName": "quali-slot",
        "displayName": "slot1",
        "pageletIDs": Array [
          "pagelet-nested",
        ],
      },
      Object {
        "configurationParameters": Object {
          "key1": "hallo",
          "key2": Array [
            "hallo",
            "welt",
          ],
        },
        "definitionQualifiedName": "quali-slot",
        "displayName": "slot2",
        "pageletIDs": Array [
          "pagelet-nested2",
        ],
      },
    ],
  },
  Object {
    "configurationParameters": Object {},
    "definitionQualifiedName": "fq",
    "displayName": "name-nested",
    "domain": "domain",
    "id": "pagelet-nested",
    "slots": Array [],
  },
  Object {
    "configurationParameters": Object {
      "key1": "test-key1",
    },
    "definitionQualifiedName": "domain-pagelet",
    "displayName": "name1",
    "domain": "domain",
    "id": "pagelet-nested2",
    "slots": Array [
      Object {
        "configurationParameters": Object {},
        "definitionQualifiedName": "fq-2",
        "displayName": "slot11",
        "pageletIDs": Array [
          "pagelet-deeply-nested",
        ],
      },
    ],
  },
  Object {
    "configurationParameters": Object {
      "key3": "1",
    },
    "definitionQualifiedName": "fq",
    "displayName": "name-nested",
    "domain": "domain",
    "id": "pagelet-deeply-nested",
    "slots": Array [],
  },
]
`;

exports[`Content Pagelet Mapper should convert pagelet with slots to single array instance 1`] = `
Array [
  Object {
    "configurationParameters": Object {
      "key": "test",
    },
    "definitionQualifiedName": "domain-pagelet",
    "displayName": "pagelet",
    "domain": "domain",
    "id": "pagelet",
    "slots": Array [
      Object {
        "configurationParameters": Object {},
        "definitionQualifiedName": "quali-slot",
        "displayName": "Slot",
        "pageletIDs": Array [],
      },
    ],
  },
]
`;

exports[`Content Pagelet Mapper should convert simple pagelet to single array instance 1`] = `
Array [
  Object {
    "configurationParameters": Object {
      "key": "test",
    },
    "definitionQualifiedName": "domain-pagelet",
    "displayName": "pagelet",
    "domain": "domain",
    "id": "pagelet",
    "slots": Array [],
  },
]
`;
